Bug 417647 - emoji-picker: Doesn't support fully HiDPI
Summary: emoji-picker: Doesn't support fully HiDPI
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Emoji Selector (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-14 16:45 UTC by Andreas Schneider
Modified: 2020-02-20 18:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.68
Sentry Crash Report:


Attachments
screenshot of the emoji picker (254.40 KB, image/png)
2020-02-14 16:45 UTC, Andreas Schneider
Details
fonts.conf (1.54 KB, text/plain)
2020-02-15 08:56 UTC, Andreas Schneider
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2020-02-14 16:45:06 UTC
Created attachment 126025 [details]
screenshot of the emoji picker

SUMMARY

The new plasma emoji-picker doesn't fully support HiDPI screens, the bar on the left doesn't provide hidpi icons.
Comment 1 Nate Graham 2020-02-14 20:21:48 UTC
Does anything get better if you install noto-coloremoji-fonts?
Comment 2 Andreas Schneider 2020-02-14 22:12:47 UTC
I have that font already installed:

rpm -q noto-coloremoji-fonts
noto-coloremoji-fonts-20180810-1.1.noarch
Comment 3 Nate Graham 2020-02-14 22:32:27 UTC
Hmm, then it's strange that the colorful versions aren't all appearing in the picker. Could be an issue with your fontconfig files.

Still, that must be unrelated. Can confirm the issue with 1.5x and 2.x scale factors. Could be an issue in the Emoji panel, or it could be an issue in Kirigami with collapsible drawer icons. Starting here.
Comment 4 Andreas Schneider 2020-02-15 08:56:04 UTC
Created attachment 126049 [details]
fonts.conf
Comment 5 Aleix Pol 2020-02-20 02:16:19 UTC
It's a bug in kirigami, it's rendering images that are too small:
https://phabricator.kde.org/D27345
Comment 6 Aleix Pol 2020-02-20 02:20:55 UTC
https://phabricator.kde.org/D27515 wrong patch 😡
Comment 7 Aleix Pol 2020-02-20 14:54:21 UTC
Git commit 2c4cc4816c041c729bd0726f87b4f757fb38d61b by Aleix Pol.
Committed on 20/02/2020 at 14:54.
Pushed by apol into branch 'master'.

Icon: fix rendering of image: urls on High DPI

Summary:
QQuickImageProvider wants the requestedSize to be accounting for the dpi
scaling. We have no information about about the DPI from the implementation
anyway.
This is also how it's explained in the qtdeclarative/manual/highdpi/ test in Qt.

Reviewers: #plasma, #kirigami, mart, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: davidedmundson, plasma-devel

Tags: #kirigami

Differential Revision: https://phabricator.kde.org/D27515

M  +3    -2    src/icon.cpp

https://commits.kde.org/kirigami/2c4cc4816c041c729bd0726f87b4f757fb38d61b