Icon: fix rendering of image: urls on High DPI

Summary:
QQuickImageProvider wants the requestedSize to be accounting for the dpi
scaling. We have no information about about the DPI from the implementation
anyway.
This is also how it's explained in the qtdeclarative/manual/highdpi/ test in Qt.

BUG: 417647

Reviewers: #plasma, #kirigami, mart, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: davidedmundson, plasma-devel

Tags: #kirigami

Differential Revision: https://phabricator.kde.org/D27515